--- a/CollectorsFrontEnd/CollectorsFrontEnd.csproj
+++ b/CollectorsFrontEnd/CollectorsFrontEnd.csproj
@@ -103,14 +103,14 @@
     <Compile Include="InterfaceModels\CollectionModel.cs" />
     <Compile Include="InterfaceModels\CardModel.cs" />
     <Compile Include="InterfaceModels\ServerInterfaceModel.cs" />
-    <Compile Include="Interfaces\CompCollectionsOverview.xaml.cs">
-      <DependentUpon>CompCollectionsOverview.xaml</DependentUpon>
+    <Compile Include="Interfaces\View_CollectionsOverview.xaml.cs">
+      <DependentUpon>View_CollectionsOverview.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Interfaces\CompCollectionView.xaml.cs">
-      <DependentUpon>CompCollectionView.xaml</DependentUpon>
+    <Compile Include="Interfaces\View_Collection.xaml.cs">
+      <DependentUpon>View_Collection.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Interfaces\CompCubeView.xaml.cs">
-      <DependentUpon>CompCubeView.xaml</DependentUpon>
+    <Compile Include="Interfaces\View_Cube.xaml.cs">
+      <DependentUpon>View_Cube.xaml</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\StoreFrontMain.xaml.cs">
       <DependentUpon>StoreFrontMain.xaml</DependentUpon>
@@ -127,8 +127,8 @@
     <Compile Include="Interfaces\Subs\CompSubAttributeChanger.xaml.cs">
       <DependentUpon>CompSubAttributeChanger.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Interfaces\Subs\CompSubBulkEdits.xaml.cs">
-      <DependentUpon>CompSubBulkEdits.xaml</DependentUpon>
+    <Compile Include="Interfaces\Subs\Module_BulkEdits.xaml.cs">
+      <DependentUpon>Module_BulkEdits.xaml</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\Subs\CompSubCardDisplayer.xaml.cs">
       <DependentUpon>CompSubCardDisplayer.xaml</DependentUpon>
@@ -139,25 +139,25 @@
     <Compile Include="Interfaces\Subs\CompSubEnterText.xaml.cs">
       <DependentUpon>CompSubEnterText.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Interfaces\Subs\CompSubGeneralization.xaml.cs">
-      <DependentUpon>CompSubGeneralization.xaml</DependentUpon>
+    <Compile Include="Interfaces\Subs\Module_Generalization.xaml.cs">
+      <DependentUpon>Module_Generalization.xaml</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\Subs\CompSubItemDisplayer.xaml.cs">
       <DependentUpon>CompSubItemDisplayer.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Interfaces\Subs\CompSubKeyValCreater.xaml.cs">
-      <DependentUpon>CompSubKeyValCreater.xaml</DependentUpon>
+    <Compile Include="Interfaces\Subs\Module_KeyValCreater.xaml.cs">
+      <DependentUpon>Module_KeyValCreater.xaml</DependentUpon>
     </Compile>
     <Compile Include="ServerIFace.cs" />
-    <Page Include="Interfaces\CompCollectionsOverview.xaml">
+    <Page Include="Interfaces\View_CollectionsOverview.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Interfaces\CompCollectionView.xaml">
+    <Page Include="Interfaces\View_Collection.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Interfaces\CompCubeView.xaml">
+    <Page Include="Interfaces\View_Cube.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -181,7 +181,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Interfaces\Subs\CompSubBulkEdits.xaml">
+    <Page Include="Interfaces\Subs\Module_BulkEdits.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -197,7 +197,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Interfaces\Subs\CompSubGeneralization.xaml">
+    <Page Include="Interfaces\Subs\Module_Generalization.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -205,7 +205,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Interfaces\Subs\CompSubKeyValCreater.xaml">
+    <Page Include="Interfaces\Subs\Module_KeyValCreater.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
