--- a/CollectorsFrontEnd/CollectorsFrontEnd.csproj
+++ b/CollectorsFrontEnd/CollectorsFrontEnd.csproj
@@ -103,6 +103,12 @@
     <Compile Include="InterfaceModels\CollectionModel.cs" />
     <Compile Include="InterfaceModels\CardModel.cs" />
     <Compile Include="InterfaceModels\ServerInterfaceModel.cs" />
+    <Compile Include="Interfaces\Controls\Control_OverlayPanel.xaml.cs">
+      <DependentUpon>Control_OverlayPanel.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaces\Subs\Module_GroupView.xaml.cs">
+      <DependentUpon>Module_GroupView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Interfaces\View_CollectionsOverview.xaml.cs">
       <DependentUpon>View_CollectionsOverview.xaml</DependentUpon>
     </Compile>
@@ -149,6 +155,14 @@
       <DependentUpon>Module_KeyValCreater.xaml</DependentUpon>
     </Compile>
     <Compile Include="ServerIFace.cs" />
+    <Page Include="Interfaces\Controls\Control_OverlayPanel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Interfaces\Subs\Module_GroupView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Interfaces\View_CollectionsOverview.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
