--- a/StoreFrontPro/StoreFrontPro.csproj
+++ b/StoreFrontPro/StoreFrontPro.csproj
@@ -93,6 +93,10 @@
     <Compile Include="Views\Components\VCCollectionsMenuList.xaml.cs">
       <DependentUpon>VCCollectionsMenuList.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Interfaces\CollectionChanger\VCollectionEditor.xaml.cs">
+      <DependentUpon>VCollectionEditor.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Interfaces\CollectionChanger\VMCollectionEditor.cs" />
     <Compile Include="Views\IViewComponent.cs" />
     <Compile Include="Views\ViewModel.cs" />
     <Compile Include="VMStoreFront.cs" />
@@ -149,6 +153,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Components\VCCollectionsMenuList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Interfaces\CollectionChanger\VCollectionEditor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
