--- a/StoreFrontPro/StoreFrontPro.csproj
+++ b/StoreFrontPro/StoreFrontPro.csproj
@@ -90,6 +90,11 @@
     <Compile Include="Views\CollectionViews\Cube\VMCardGroupDisplay.cs" />
     <Compile Include="Views\CollectionViews\Cube\VMCardGroupList.cs" />
     <Compile Include="Views\CollectionViews\Cube\VMCollectionCube.cs" />
+    <Compile Include="Views\Components\SuggestionsSearchBox\MSuggestionsSearchBox.cs" />
+    <Compile Include="Views\Components\SuggestionsSearchBox\VMSuggestionsSearchBox.cs" />
+    <Compile Include="Views\Components\SuggestionsSearchBox\VSuggestionsSearchBox.xaml.cs">
+      <DependentUpon>VSuggestionsSearchBox.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Components\VCCollectionsMenuList.xaml.cs">
       <DependentUpon>VCCollectionsMenuList.xaml</DependentUpon>
     </Compile>
@@ -149,6 +154,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\CollectionViews\Cube\VCollectionCube.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Components\SuggestionsSearchBox\VSuggestionsSearchBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
