--- a/MagicCollection/MagicCollection.vcxproj
+++ b/MagicCollection/MagicCollection.vcxproj
@@ -165,6 +165,7 @@
     </ClCompile>
     <ClCompile Include="ListHelper.cpp" />
     <ClCompile Include="MagicCollection.cpp" />
+    <ClCompile Include="MD5.cpp" />
     <ClCompile Include="PseudoCopy.cpp" />
     <ClCompile Include="ServerIFace.cpp" />
     <ClCompile Include="ServerIFace\ClientSocket.cpp" />
@@ -188,6 +189,7 @@
     <ClInclude Include="CopyObject.h" />
     <ClInclude Include="JSONImporter.h" />
     <ClInclude Include="ListHelper.h" />
+    <ClInclude Include="MD5.h" />
     <ClInclude Include="PseudoCopy.h" />
     <ClInclude Include="ServerIFace.h" />
     <ClInclude Include="ServerIFace\ClientSocket.h" />
